--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -60,7 +60,7 @@ body{
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     background-color: lightgray;
     width: 100%;
-    height: 45vh;
+    height: 40vh;
     display: flex;
     flex-direction: row;
     
@@ -71,8 +71,9 @@ body{
     padding-top: 20px;
     /* outline: 2px solid blue; */
 }
-.contenedor__informacion--personas{
+.contenedor__informacion--busqueda{
     width: 50%;
+    padding-top: 20px;
     /* outline: 2px solid red; */
 }
 
@@ -94,13 +95,11 @@ body{
     padding-top: 12px;
     padding-left: 12px;
     height: 165px;
-    width:141px;
+    width:145px;
     /* outline: 2px solid blueviolet; */
 }.presentacion__mensaje{
-    
-    width: 47%;
-    margin-left: 30px;
-    
+    width: 60%;
+    margin-left: 30px;    
 }
 .presentacion__mensaje h1{
     margin-bottom: 0px;
@@ -116,8 +115,29 @@ body{
     margin-top: 0px;
     font-size: 140%;
     font-weight: bold;
-       
 }
+/* incia estilos del buscador */
+.opcion__busqueda{
+    background-color: white;
+    width: 90%;
+    height: 81%;
+    display: flex;
+    flex-direction: row;
+    margin: auto;
+    padding: 10px;
+    box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
+    border-radius: 20px;
+    /* outline: 2px solid black; */
+    
+}
+
+
+
+
+
+
+
+
 
 
 
