--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -25,7 +25,7 @@ body{
     margin-top: 20px;
     display: flex;
 }
-.btn{
+/* .btn{
     margin-right: 10px;
     background-color: black;
     color: white;
@@ -47,10 +47,10 @@ body{
     color: grey;
     font-weight: bold;
     font-size: 13px;
-}
+} */
 .input::placeholder{
   padding-left: 20px;
-  color: lightgrey;
+  color: #212F3C;
 }
 .contenedor{/*contenedor padre principal*/
     display: flex;
@@ -60,7 +60,7 @@ body{
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     background-color: lightgray;
     width: 100%;
-    height: 40vh;
+    height: 50%;
     display: flex;
     flex-direction: row;
     
@@ -69,11 +69,13 @@ body{
 .contenedor__informacion--saludo{
     width: 50%;
     padding-top: 20px;
+    padding-bottom: 10px;
     /* outline: 2px solid blue; */
 }
 .contenedor__informacion--busqueda{
     width: 50%;
     padding-top: 20px;
+    padding-bottom: 10px;
     /* outline: 2px solid red; */
 }
 
@@ -86,6 +88,7 @@ body{
     flex-direction: row;
     margin: auto;
     padding: 10px;
+    padding-bottom: 20px;
     box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
     /* outline: 2px solid blueviolet; */
@@ -103,7 +106,8 @@ body{
 }
 .presentacion__mensaje h1{
     margin-bottom: 0px;
-    font-size: xxx-large;
+    font-size:4vw;
+    margin-block-start: 0.4em;
 }
 
 .presentacion__mensaje h3{
@@ -113,22 +117,90 @@ body{
 }
 .presentacion__mensaje h5{
     margin-top: 0px;
-    font-size: 140%;
+    font-size:2vw;
     font-weight: bold;
 }
 /* incia estilos del buscador */
 .opcion__busqueda{
-    background-color: white;
+    background-image: linear-gradient(to bottom right, rgb(233, 233, 27),orange); 
     width: 90%;
     height: 81%;
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
     padding: 10px;
+    padding-bottom: 20px;
     box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
-    /* outline: 2px solid black; */
+    /* outline: 2px solid black; */   
+}
+.opcion__busqueda--buscar{
+    width: 90%;
+    display: flex;
+    flex-direction: column;
+    padding-top: 60px;
+    align-items: center;
+}
+.opcion__busqueda--buscar button{
+    all: unset;
+    background-color: #283747;
+    color: white;
+    border-color:none;
+    border-radius: 50px;
+    text-align: center;
+    padding-bottom: 0;
+    font-size: 15px;
+    font-weight: bold;
+    width: 100px;
+    height: 30px;
     
+}
+.opcion__busqueda--buscar:hover button , button :hover{
+    background-color: black;
+    color: white;
+}
+
+.opcion__busqueda input{
+    width: 80%;
+    height: 30px;
+    border-radius: 50px;
+    margin-bottom: 15px;
+    outline: none;
+    border: 3px solid #283747;
+    text-align: center;
+    color:#283747 ;
+    font-weight: bold;
+    font-size: 15px;
+    outline: inherit;
+}
+.contenedor__contenido{/*contenido area principal*/
+    /* background-color: coral; */
+    height: 80vh;
+    width: 100%;
+    display: flex;
+    /* outline: 2px solid red; */
+      
+}
+.contenedor_contendio--informacion{
+    background-color: white;
+    border-radius: 20px;
+    width: 96%;
+    height: 50%;
+    margin: auto;
+    margin-top: 15px;
+    box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
+    display: flex;
+    flex-direction: row;  
+     /* outline: 2px solid black; */
+}
+.contenedor__frecuentes{
+    width: 70%;
+    outline: 2px solid magenta;
+}
+.contenedor__recursos{
+    width: 30%;
+    outline: 2px solid blue;
 }
 
 
@@ -154,13 +226,6 @@ body{
     color: white;
     margin-left: 2rem;
     
-}
-.contenedor__contenido{/*contenido area principal*/
-    /* background-color: coral; */
-    height: 80vh;
-    width: 100%;
-    /* outline: 2px solid red; */
-    flex-direction: column;    
 }
 .contenedor_contendio--titulo{
     /* outline: 2px solid black; */
@@ -190,16 +255,7 @@ body{
     color: white;
     font-size: 100%;  
 }
-.contenedor_contendio--informacion{
-    background-color: white;
-    border-radius: 20px;
-    width: 96%;
-    height: 94%;
-    margin: auto;
-    margin-top: 15px;
-    box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
-     /* outline: 2px solid black; */
-}
+
 .infopadre{
     width: 98%;
     height: 94%;
