--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -1,3 +1,12 @@
+
+/*  */
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v7.0.29,
+* Autoprefixer: v9.7.6
+* Browsers: last 4 version
+*/
+
 body{
     margin: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
@@ -6,9 +15,14 @@ body{
     background-color: white;
     width: 100%;
     height: 70px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    justify-content: space-between;
-    box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
+    -webkit-box-pack: justify;
+        -ms-flex-pack: justify;
+            justify-content: space-between;
+    -webkit-box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
+            box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
     padding-bottom: 5px;
 }
  .head__imagen--img{ /*estilos imagen progrentis*/
@@ -23,6 +37,8 @@ body{
 }
 .head__menu--opciones{
     margin-top: 20px;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
 }
 /* .btn{
@@ -48,21 +64,47 @@ body{
     font-weight: bold;
     font-size: 13px;
 } */
+.input::-webkit-input-placeholder{
+  padding-left: 20px;
+  color: #212F3C;
+}
+.input::-moz-placeholder{
+  padding-left: 20px;
+  color: #212F3C;
+}
+.input:-ms-input-placeholder{
+  padding-left: 20px;
+  color: #212F3C;
+}
+.input::-ms-input-placeholder{
+  padding-left: 20px;
+  color: #212F3C;
+}
 .input::placeholder{
   padding-left: 20px;
   color: #212F3C;
 }
 .contenedor{/*contenedor padre principal*/
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     /* outline: 2px solid black; */
 }
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     background-color: lightgray;
     width: 100%;
     height: 50%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     
     /* outline:2px solid aquamarine; */
 }
@@ -84,14 +126,22 @@ body{
     text-align: center;
     width: 90%;
     height: 81%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
     margin: auto;
     padding: 10px;
     padding-bottom: 20px;
-    box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
+    -webkit-box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
+            box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
     /* outline: 2px solid blueviolet; */
+    background-image: -webkit-gradient(linear,left top, right bottom,from(orange), to(rgb(233, 233, 27)));
+    background-image: -o-linear-gradient(top left,orange, rgb(233, 233, 27));
     background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27)); 
 }
 .presentacion__imagen{
@@ -107,7 +157,8 @@ body{
 .presentacion__mensaje h1{
     margin-bottom: 0px;
     font-size:4vw;
-    margin-block-start: 0.4em;
+    -webkit-margin-before: 0.4em;
+            margin-block-start: 0.4em;
 }
 
 .presentacion__mensaje h3{
@@ -122,25 +173,42 @@ body{
 }
 /* incia estilos del buscador */
 .opcion__busqueda{
+    background-image: -webkit-gradient(linear, left top, right bottom, from(rgb(233, 233, 27)),to(orange));
+    background-image: -o-linear-gradient(top left, rgb(233, 233, 27),orange);
     background-image: linear-gradient(to bottom right, rgb(233, 233, 27),orange); 
     width: 90%;
     height: 81%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
-    align-items: center;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
     margin: auto;
     padding: 10px;
     padding-bottom: 20px;
-    box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
+    -webkit-box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
+            box-shadow: 7px 26px 58px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
     /* outline: 2px solid black; */   
 }
 .opcion__busqueda--buscar{
     width: 90%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: column;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
     padding-top: 60px;
-    align-items: center;
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
 }
 .opcion__busqueda--buscar button{
     all: unset;
@@ -178,6 +246,8 @@ body{
     /* background-color: coral; */
     height: 80vh;
     width: 100%;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     /* outline: 2px solid red; */
       
@@ -189,9 +259,15 @@ body{
     height: 50%;
     margin: auto;
     margin-top: 15px;
-    box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
+    -webkit-box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
+            box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
-    flex-direction: row;  
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;  
      /* outline: 2px solid black; */
 }
 .contenedor__frecuentes{
@@ -202,10 +278,7 @@ body{
     width: 30%;
     outline: 2px solid blue;
 }
-
-
-
-
+/*  */
 
 
 
