--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -6,31 +6,25 @@ body{
     background-color: white;
     width: 100%;
     height: 70px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
+    justify-content: space-between;
     box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
     padding-bottom: 5px;
 }
  .head__imagen--img{ /*estilos imagen progrentis*/
-    width: 350px;
+    width: 22rem;
     margin-top: 10px;
     margin-left: 20px;
 }
-.head__menu{/*estilos para el input buscar*/
+/* .head__menu{ estilos para el imput buscar 
     color: white;
     margin-right: 30px;
     width: 50%;
 }
 .head__menu--opciones{
     margin-top: 20px;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-}
+} */
 /* .btn{
     margin-right: 10px;
     background-color: black;
@@ -54,55 +48,32 @@ body{
     font-weight: bold;
     font-size: 13px;
 } */
-.input::-webkit-input-placeholder{
-  padding-left: 20px;
-  color: #212F3C;
-}
-.input::-moz-placeholder{
-  padding-left: 20px;
-  color: #212F3C;
-}
-.input:-ms-input-placeholder{
-  padding-left: 20px;
-  color: #212F3C;
-}
 .input::placeholder{
   padding-left: 20px;
   color: #212F3C;
 }
 .contenedor{/*contenedor padre principal*/
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    flex-direction: column;
     /* outline: 2px solid black; */
 }
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     /* background-color: lightgray; */
     width: 100%;
-    height: 50%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
     
-    /* outline:2px solid aquamarine; */
+    /* outline:2px solid rgb(25, 10, 235); */
 }
 .contenedor__informacion--saludo{
     width: 50%;
-    padding-top: 20px;
+    padding-top: 15px;
     /* padding-bottom: 10px; */
     /* outline: 2px solid blue; */
 }
 .contenedor__informacion--busqueda{
     width: 50%;
-    padding-top: 20px;
+    padding-top: 15px;
     /* padding-bottom: 10px; */
     /* outline: 2px solid red; */
 }
@@ -111,28 +82,22 @@ body{
     color: white;
     text-align: center;
     width: 90%;
-    height: 73%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    height: 81%;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;
+    flex-direction: row;
     margin: auto;
     padding: 10px;
-    padding-bottom: 20px;
-    box-shadow: 0px 20px 16px rgba(97, 97, 97, 0.50);
+    /* padding-bottom: 20px; */
+    box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
     /* outline: 2px solid blueviolet; */
-    background-image: -webkit-linear-gradient(top left,orange, rgb(233, 233, 27));
     background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27)); 
 }
 .presentacion__imagen{
     /* padding-top: 12px;
     padding-left: 12px; */
-    /* height: 165px; */
-    width:177px;
+    height: 177px;
+    width: 177px;
     /* outline: 2px solid blueviolet; */
 }.presentacion__mensaje{
     width: 60%;
@@ -141,8 +106,7 @@ body{
 .presentacion__mensaje h1{
     margin-bottom: 0px;
     font-size:4vw;
-    -webkit-margin-before: 0.4em;
-            margin-block-start: 0.4em;
+    margin-block-start: 0.4em;
 }
 
 .presentacion__mensaje h3{
@@ -157,40 +121,25 @@ body{
 }
 /* incia estilos del buscador */
 .opcion__busqueda{
-    background-image: -webkit-linear-gradient(top left, rgb(233, 233, 27),orange);
     background-image: linear-gradient(to bottom right, rgb(233, 233, 27),orange); 
     width: 90%;
-    height:  73%;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    height: 81%;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    align-items: center;
     margin: auto;
     padding: 10px;
-    padding-bottom: 20px;
-    box-shadow: 0px 20px 16px rgba(97, 97, 97, 0.50);
+    /* padding-bottom: 20px; */
+    box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50);
     border-radius: 20px;
     /* outline: 2px solid black; */   
 }
 .opcion__busqueda--buscar{
     width: 90%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    padding-top: 35px;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    flex-direction: column;
+    padding-top: 45px;
+    align-items: center;
 }
 .opcion__busqueda--buscar button{
     all: unset;
@@ -226,11 +175,10 @@ body{
 }
 .contenedor__contenido{/*contenido area principal*/
     /* background-color: coral; */
-    height: 80vh;
+    /* height: 80vh; */
     width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
+    flex-direction: column;
     /* outline: 2px solid red; */
       
 }
@@ -238,17 +186,12 @@ body{
     background-color: white;
     /* border-radius: 20px; */
     width: 100%;
-    height: 100%;
+    height: 30em;
     margin: auto;
-    margin-top: 15px;
+    /* margin-top: 15px; */
     box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: row;
-            flex-direction: row;  
+    flex-direction: row;  
      /* outline: 2px solid black; */
 }
 .contenedor__frecuentes{
@@ -268,15 +211,15 @@ body{
 }
 .contenedor__frecuentesfAQS--titulo{
     width: 100%;
-    height: 40px;
-    border-top-left-radius:20px ;
-    border-top-right-radius:20px ;
+    /* height: 40px; */
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
     background-color: slategrey;
     color: white;
 }
 .contenedor__frecuentesfAQS--titulo h1{
-    font-size: 20px;
-    margin-bottom: 0;
+    font-size: 25px;
+    margin-bottom: 6px;
     margin-top: 10px;
     text-align: center;
     font-weight: bold;
@@ -284,6 +227,19 @@ body{
 .contenedor__frecuentesfAQS--preguntas{
     background-color: lightgray;
 }
+.opcionesFAQS ul{
+font-size: 17px;
+    /* margin-right: 30px;
+    text-decoration: none;
+    position: absolute;
+    text-align: right; */
+}
+
+
+
+
+
+
 .contenedor__recursos{
     width: 30%;
     /* outline: 2px solid blue; */
