--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -249,19 +249,36 @@ font-size: 17px;
     /* background-color: lghtgray; */
 }
 .contenedor__recursosfichaTC{
+    background-color: white;
     width: 100%;
-    height: 30%;
+    height: 50%;
     border: 3px solid #283747;
     border-radius: 20px;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
+    color: #39414c;
+    box-shadow: 0px 18px 10px rgba(97, 97, 97, 0.50);
     /* outline: 2px solid black; */
 }
+.contenedor__recursosfichaTC h5{
+    font-size: 2em;
+    margin-top: 13px;
+    margin-bottom: 0;
+}
+.contenedor__recursosfichaTC h6{
+    margin-right: 30px;
+    font-size: 0.90em;
+    margin-left: 30px;
+    margin-bottom: 0;
+    margin-top: 0;
+    text-align: center;
+}
 .contenedor__recursosfichaTC img{
-    height: 79%;
-    width: 19%;
+    margin-top: 4px;
+    height: 80%;
+    width: 20%;
 }
 .contenedor__recursosfichaTC--btn{
     all: unset;
@@ -273,17 +290,17 @@ font-size: 17px;
     padding-bottom: 0;
     font-size: 30px;
     font-weight: bold;
-    width: 83%;
-    height: 47%;
+    width: 70%;
+    height: 26%;
     margin-top: 25px;
-    box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
+    box-shadow: 0px 18px 10px rgba(97, 97, 97, 0.50);
     
 }
 
 .contenedor__recursos--pendiente{
     width: 90%;
     height: 40%;
-    outline: 2px solid red;
+    /* outline: 2px solid red; */
 }
 
 
