--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -1,4 +1,5 @@
 body{
+    /* background-color: black; */
     margin: 0px;
     font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
@@ -8,11 +9,14 @@ body{
     height: 70px;
     display: flex;
     justify-content: space-between;
-    box-shadow: 2px 5px 45px rgba(97, 97, 97, 0.50);
+    border-bottom: 2px;
+    /* box-shadow: 2px 10px 15px rgba(97, 97, 97, 0.50); */
     padding-bottom: 5px;
+    margin-bottom: 2px;
+    /* outline: 2px solid red; */
 }
  .head__imagen--img{ /*estilos imagen progrentis*/
-    width: 22rem;
+    width: 10rem;
     margin-top: 10px;
     margin-left: 20px;
 }
@@ -60,10 +64,26 @@ body{
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     /* background-color: lightgray; */
     width: 100%;
-    display: flex;
-    flex-direction: row;
-    
+    height: 150px;
+    background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27));
+    margin-bottom: 150px;
+    /* display: flex;
+    flex-direction: row; */
     /* outline:2px solid rgb(25, 10, 235); */
+}
+.bgimg{
+    width: 100%;
+    background-image: url('img/wave-medium-reversed.png');
+    background-repeat: no-repeat;
+}
+
+.image__header{
+    width: 100%;
+    height: 50px;
+}
+.image__foter{
+    width: 100%;
+    height: 50px;
 }
 .contenedor__informacion--saludo{
     width: 50%;
