--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -64,39 +64,41 @@ body{
 .contenedor__informacion{/*contenedor secundario de la barra menu opciones*/
     /* background-color: lightgray; */
     width: 100%;
-    height: 150px;
+    height: 15rem;
     background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27));
-    margin-bottom: 150px;
-    /* display: flex;
-    flex-direction: row; */
-    /* outline:2px solid rgb(25, 10, 235); */
-}
-.bgimg{
-    width: 100%;
-    background-image: url('img/wave-medium-reversed.png');
-    background-repeat: no-repeat;
-}
+    /* margin-bottom: 150px; */
+     display: flex;
+    flex-direction: row; 
 
-.image__header{
-    width: 100%;
-    height: 50px;
-}
-.image__foter{
-    width: 100%;
-    height: 50px;
+    /* outline:2px solid rgb(25, 10, 235); */
 }
 .contenedor__informacion--saludo{
     width: 50%;
     padding-top: 15px;
+    position: absolute;
+    /* position: absolute; */
     /* padding-bottom: 10px; */
     /* outline: 2px solid blue; */
 }
 .contenedor__informacion--busqueda{
     width: 50%;
     padding-top: 15px;
+    position: absolute;
+    margin-left: 50%;
+    /* position: absolute; */
     /* padding-bottom: 10px; */
     /* outline: 2px solid red; */
 }
+/* .contenedor__informacion--saludo::before{
+    content: "";
+    position: absolute;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 120px;
+    background: url("img/wave-large-reversed.png") center no-repeat;
+    background-size: cover;
+} */
 
 .presentacion__titulo{
     color: white;
@@ -108,16 +110,16 @@ body{
     margin: auto;
     padding: 10px;
     /* padding-bottom: 20px; */
-    box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50);
-    border-radius: 20px;
+    /* box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50); */
+    /* border-radius: 20px; */
     /* outline: 2px solid blueviolet; */
-    background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27)); 
+    /* background-image: linear-gradient(to bottom right,orange, rgb(233, 233, 27));  */
 }
 .presentacion__imagen{
     /* padding-top: 12px;
     padding-left: 12px; */
-    height: 177px;
-    width: 177px;
+    height: 150px;
+    width: 150px;
     /* outline: 2px solid blueviolet; */
 }.presentacion__mensaje{
     width: 60%;
@@ -126,7 +128,7 @@ body{
 .presentacion__mensaje h1{
     margin-bottom: 0px;
     font-size:4vw;
-    margin-block-start: 0.4em;
+    margin-block-start: 0.1em;
 }
 
 .presentacion__mensaje h3{
@@ -141,7 +143,7 @@ body{
 }
 /* incia estilos del buscador */
 .opcion__busqueda{
-    background-image: linear-gradient(to bottom right, rgb(233, 233, 27),orange); 
+    /* background-image: linear-gradient(to bottom right, rgb(233, 233, 27),orange);  */
     width: 90%;
     height: 81%;
     display: flex;
@@ -150,8 +152,8 @@ body{
     margin: auto;
     padding: 10px;
     /* padding-bottom: 20px; */
-    box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50);
-    border-radius: 20px;
+    /* box-shadow: 0px 21px 15px rgba(97, 97, 97, 0.50); */
+    /* border-radius: 20px; */
     /* outline: 2px solid black; */   
 }
 .opcion__busqueda--buscar{
@@ -209,7 +211,7 @@ body{
     height: 30em;
     margin: auto;
     /* margin-top: 15px; */
-    box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5);
+    /* box-shadow: 2px 5px 45px rgba(97, 84, 84, 0.5); */
     display: flex;
     flex-direction: row;  
      /* outline: 2px solid black; */
