--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -72,6 +72,12 @@ body{
 
     /* outline:2px solid rgb(25, 10, 235); */
 }
+.imagen_olas{
+    width: 100%;
+    height: 118px;
+    position: static;
+    margin-top: auto;
+}
 .contenedor__informacion--saludo{
     width: 50%;
     padding-top: 15px;
