--- a/css/estilo_vista_principal.css
+++ b/css/estilo_vista_principal.css
@@ -73,8 +73,8 @@ body{
     /* outline:2px solid rgb(25, 10, 235); */
 }
 .imagen_olas{
-    /* width: 100%; */
-    height: 170px;
+    width: 100%;
+    height: 150px;
     position: static;
     margin-top: auto;
 
